# Inertial-Measurement-Unit

./: .gitignore  Barometer.c  Barometer.h  CMakeLists.txt  InertialMeasurementUnit.c  i2c.c  i2c.h  units.h
AK8963/: AK8963.h
BMP180/: BMP180.c  BMP180.h  BMP180_API.h
MPU/: MPU6050.h  MPU6500.h
MPU6050/: MPU6050.h
MPU9250/: MPU9250.h
i2c/: i2c.c  i2c.h
src/: Barometer.c  Barometer.h  InertialMeasurementUnit.c
src/BMP180/: BMP180.c  BMP180.h  BMP180_Reg.h
src/MPU/: MPU6050_Reg.h  MPU6500_Reg.h
src/i2c/: i2c.c  i2c.h
